packages/gatsby-theme-carbon/src/components/markdown/Markdown.module.scss
//---------------------------------------
// P
//---------------------------------------
.paragraph-row {
  margin-bottom: $spacing-06;
}

.paragraph {
  @include carbon--type-style('body-long-02');

  @include carbon--breakpoint('md') {
    padding-right: $spacing-05;
  }

  @include carbon--breakpoint-down('sm') {
    padding-right: $spacing-05;
  }
}

// Responsive by default
.paragraph--responsive {
  padding-left: $spacing-05;

  // 8 col
  @include carbon--breakpoint('lg') {
    width: 66.667%;
  }

  @include carbon--breakpoint-down('sm') {
    padding-right: $spacing-05;
  }
}

// If paragraph is inside a user specified row then allow the grid code to set the width and padding
:global(.#{$prefix}--row .#{$prefix}--row) .paragraph {
  width: 100%;
  padding-left: 0;

  @include carbon--breakpoint('md') {
    padding-right: 0;
  }
}

//---------------------------------------
// Responsive widths
//---------------------------------------

.h1,
.h2,
.h3,
.h4,
.h5,
.h6,
.list {
  width: 100%;

  @include carbon--breakpoint('lg') {
    width: 66.667%;
  }
}

// responsive items in a list need to be full width
.list-item .paragraph,
.list-item :global(.bx--row) {
  width: 100%;
}

// If a paragraph is the last item in a list don't push next list item down
.list-item .paragraph {
  margin-bottom: $spacing-03;
}

// Fix bleed when code snippets are used in a list
.list-item > pre {
  margin-left: -1rem;
  margin-right: -1.5rem;
  margin-top: $spacing-05;
  @include carbon--breakpoint('md') {
    margin-right: 1.5rem;
  }
}

//---------------------------------------
// List items / ol / ul / li
//---------------------------------------

:global(.bx--list--ordered).list,
:global(.bx--list--unordered).list {
  margin-bottom: $spacing-06;
}

:global(.bx--list--ordered) .list-item,
:global(.bx--list--unordered) .list-item {
  @include carbon--type-style('body-long-02');
  padding-right: 0;
  width: 100%;
  padding-left: $spacing-05;
}

:global(.container--dark) :global(.bx--list__item) {
  color: $carbon--white-0;
}

//---------------------------------------
// Blockquote
//---------------------------------------
.blockquote {
  margin: $spacing-08 0;
  color: $carbon--blue-60;
  font-style: italic;

  @include carbon--breakpoint('md') {
    margin-left: $spacing-08;
  }
}

.blockquote .paragraph {
  @include carbon--type-style('expressive-heading-03', true);
  margin-bottom: 0;
  width: 100%;
}

.blockquote .paragraph--responsive {
  // 8 col
  @include carbon--breakpoint('lg') {
    width: calc(66.667% - 3rem);
  }
}

// If quote is inside a user specified row then allow the grid code to set the width
:global(.#{$prefix}--row) .blockquote .paragraph {
  @include carbon--breakpoint('md') {
    width: 100%;
  }
}

.blockquote cite {
  @include carbon--type-style('body-long-01');
  display: block;
  margin-top: $spacing-02;
}

.blockquote .list-item {
  color: $carbon--blue-60;
}

//dark
:global(.container--dark) .blockquote,
:global(.container--dark) .blockquote .list-item {
  color: $carbon--blue-40;
}

//---------------------------------------
// Headings
//---------------------------------------

.h1 {
  margin-top: $spacing-12;
  margin-bottom: $spacing-05;
  @include carbon--type-style('expressive-heading-05', true);
}

.h2 {
  margin-top: $spacing-11;
  margin-bottom: $spacing-05;
  @include carbon--type-style('expressive-heading-04', true);
}

.h3 {
  margin-top: $spacing-10;
  margin-bottom: $spacing-05;
  @include carbon--type-style('expressive-heading-03', true);
}

.h4 {
  margin-top: $spacing-04;
  @include carbon--type-style('heading-02');
}

.h5,
.h6 {
  // h5 and h6 intentionally mimic one another
  margin-top: $spacing-04;
  @include carbon--type-style('heading-01');
}

